Fixing pagination border for Cerulean, Journal, Readable, Simplex, Spacelab & United

--- a/cerulean/bootstrap.css
+++ b/cerulean/bootstrap.css
@@ -7350,6 +7350,11 @@ h6 {
   color: #317EAC;
 }
 
+.pagination .active > a,
+.pagination .active > a:hover {
+  border-color: #ddd;
+}
+
 .panel-primary .panel-title {
   color: #fff;
 }
